# environment-settings

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
environment_settings/: __init__.py  environment_settings.py
tests/unittests/: test_environment_settings.py
tests/unittests/testconf/: .env  __init__.py  unittest.py
