[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "environment_settings"
version = "0.0.3"
authors = [
  {name="Adam Foster", email="affoster@gmail.com"},
]
description = "Environment specific management of application configuration"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = [
    "configuration",
    "settings",
    "dotenv",
    "environment"
]

[project.optional-dependencies]
test = [
  "pytest > 7.0.0"
]

[project.urls]
homepage = "https://github.com/m0nonoke/environment-settings"
repository = "https://github.com/m0nonoke/environment-settings"
