[metadata]
name = environment_settings
version = 0.0.1
description = Environment specific management of application configuration
long_description = file: README.md
licence = MIT
author = Adam Foster
author_email = affoster@gmail.com
url = https://github.com/m0nonoke/environment-settings
download_url = https://github.com/m0nonoke/environment-settings/archive/refs/heads/main.zip
keywords = configuration, settings, dotenv, environment
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
[options]
packages = find:
install_requires =
    importlib; python_version >= "3.6"

