[metadata]
name = environment_settings
version = 0.0.2
description = Environment specific management of application configuration
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT
author = Adam Foster
author_email = affoster@gmail.com
url = https://github.com/m0nonoke/environment-settings
download_url = https://github.com/m0nonoke/environment-settings/archive/refs/heads/main.zip
keywords = configuration, settings, dotenv, environment
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
[options]
packages = find:
install_requires =
    python_version >= "3.6"

